# wce

./: LICENSE  README.md
backend/: .dockerignore  Cargo.toml  Config.toml  build.sh  docker-compose.yml  tree.txt
backend/src/app/: Cargo.toml
backend/src/app/src/: main.rs
backend/src/common/: Cargo.toml
backend/src/common/src/: bcrypt.rs  lib.rs  logger.rs  response.rs
backend/src/common/src/config/: mod.rs  type.rs
backend/src/common/src/traits/: db_trait.rs  mod.rs
backend/src/services/editor/: Dockerfile
backend/src/services/game/: Dockerfile
backend/src/services/player/: Cargo.toml  Dockerfile
backend/src/services/player/.sqlx/: query-1aed047a8f9fbc71c5fe6edc05699951ce035458950300efb043518c33537d81.json  query-56487ee9cd8186a42f56d665bce028828e6dc25baa77783aef1321bbaeab7997.json  query-d2a68e114741be5843d2bb92dbcd72247a5e2a03596cc4de5dca598030aecc82.json  query-d60c5d3a483d79de959026df7b86f76decaa23e6f17539a8bde4cf7d9c940556.json  query-d69c8eb1847f0e8f178b5caf6e1ebd518a174fc42a0630fa91a3881f374c9be9.json  query-e3044cd87dcc0ff066c100b8d4be8244d048e6b18e40569eb44a2a4b97b54556.json
backend/src/services/player/migrations/: 20250104153525_create_player_table.sql  20250111141852_create_players_table.sql  20250111141923_create_player_auth_table.sql
backend/src/services/player/src/: error.rs  lib.rs  main.rs
backend/src/services/player/src/db/: player.rs
backend/src/services/player/src/db/player/: mod.rs  validate.rs
backend/src/services/player/src/routes/: mod.rs
backend/src/services/player/src/utils/: jwt.rs
frontend/: package-lock.json  (+1 more)
(+29 files in other folders)
