[workspace]
members = [
    "src/services/player",
    "src/services/editor",
    "src/services/game",
    "src/common",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tracing = { version = "0.1.41", features = ["log"] }
futures = "0.3.31"
