[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = "0.8.19"
serde = { workspace = true }
bcrypt = "0.16.0"
