[package]
name = "player"
version = "0.1.0"
edition = "2021"
default-run = "player"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9.3.0"
common = { path = "../../common" }
axum = "0.7.9"
nutype = { version = "0.5.1", features = ["regex"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "time",
] }
tracing = { workspace = true }
futures = { workspace = true }
